--- a/frontend/src/components/Models/Styles/CityModel.module.css
+++ b/frontend/src/components/Models/Styles/CityModel.module.css
@@ -1,18 +1,18 @@
 /* ? overlay */
 body:has(.model__container__active){
-    height: 100vh;
     overflow: hidden;
 }
 
 body:has(.model__container__active)::after{
     content: "";
-    position: absolute;
+    position: fixed;
     width: 100%;
-    height: 100vh;
     background: #282c3f;
     opacity: .7;
     top: 0;
     left: 0;
+    right: 0;
+    bottom: 0;
     z-index: 8888;
 }
 
