--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -45,6 +45,6 @@
 }
 @media screen and (max-width:850px) {
     .productList{
-        grid-template-columns: 1fr;
+        grid-template-columns: 1fr !important;
     }
 }
